Bug 1817271: fix ordering of WebGPU feature toggling when blocklisted r=webgpu-reviewers,jimb

In `gfx/config/gfxFeature.{h,cpp}`, it can be observed that a `mozilla::gfx::FeatureState` is
a state machine that collects different "levels" of enabled-ness. To summarize[^1], these are:

1. Default
2. User
3. Environment
4. Runtime

The rules for initializing each of these layers are basically that:

1. At least (1) must be initialized, otherwise, the feature is "unused".
2. Other levels may only be initialized (or re-initialized) if (a) all previous levels were
    initialized, and (b) no subsequent levels are initialized. Otherwise, throw an assertion
    error.

In the bug we're fixing here, we were attempting to configure the environment level before the user
level, which violates rule 2. Oops! Make sure we init the user level before initting the
environment level.

[^1]: You can find a better description of the intent of each layer at <https://searchfox.org/mozilla-central/rev/75da1dd5d4b9b991f919a41594194eab93cdef62/gfx/config/gfxFeature.h#147-155>.

Differential Revision: https://phabricator.services.mozilla.com/D170764